# benchpro_rust

./: .gitignore  Cargo.toml  README.md
data/test_data/detectable_species/: gtdb_all_species_r214.tsv  metaphlan_species_Jan21.txt
data/test_data/meta/: meta.xlsx
data/test_data/profiles/gold_standard/NCBI/: taxonomic_profile_0.txt  taxonomic_profile_1.txt  taxonomic_profile_2.txt  taxonomic_profile_3.txt  taxonomic_profile_4.txt
data/test_data/profiles/predictions/MG-TK/: GIT.sample.0.profile  GIT.sample.1.profile  GIT.sample.2.profile  GIT.sample.3.profile  GIT.sample.4.profile
data/test_data/profiles/predictions/MetaPhlAn3/: 0.profile.tsv  1.profile.tsv  2.profile.tsv  3.profile.tsv  4.profile.tsv
data/test_data/profiles/predictions/MetaPhlAn4/: 0.profile.tsv  1.profile.tsv  2.profile.tsv  3.profile.tsv  4.profile.tsv
data/test_data/profiles/predictions/mOTUs3/: 0.profile.tsv  1.profile.tsv  2.profile.tsv  3.profile.tsv  4.profile.tsv
data/test_data/profiles/predictions/protal/: 0.profile  1.profile  2.profile  3.profile  4.profile
data/test_data/profiles/predictions/sylph/: Gastrointestinal_0.profile  Gastrointestinal_1.profile  Gastrointestinal_2.profile  Gastrointestinal_3.profile  Gastrointestinal_4.profile
data/test_data/trees/gtdb/r207/: bac120_r207.sp_labels.tree
src/: benchpro.rs  common.rs  format.rs  main.rs  meta.rs  options.rs  profile.rs  profile_handler.rs  taxonomy.rs  test_data.rs  tree_adjusted_benchmarks.rs  tree_handler.rs  utils.rs
src/taxonomic_profiling/: detailed_data.rs  mod.rs
(+15 files in other folders)
